# ITKHigherOrderAccurateGradient

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README  README.rst  appveyor.yml  azure-pipelines.yml  itk-module.cmake  setup.py
.circleci/: config.yml
Article/: Makefile  ij_higher_order_accurate_gradient.bib  ij_higher_order_accurate_gradient.tex
Article/Comparisons/: other_gradients.py  view_gradient.py
Code/: itkHigherOrderAccurateDerivativeImageFilter.h  itkHigherOrderAccurateDerivativeOperator.h  itkHigherOrderAccurateGradientImageFilter.h  itkHigherOrderAccurateGradientImageFilter.txx  itkNthOrderAccurateDerivativeImageFilter.h  itkNthOrderAccurateDerivativeImageFilter.txx  itkNthOrderAccurateDerivativeOperator.h  itkNthOrderAccurateDerivativeOperator.txx  itkNthOrderAccurateGradientImageFilter.h  itkNthOrderAccurateGradientImageFilter.txx  itkSecondOrderGradientImageFilter.h  itkSecondOrderGradientImageFilter.txx
Testing/: CMakeLists.txt  itkHigherOrderAccurateDerivativeImageFilterTest.cxx  itkHigherOrderAccurateGradientImageFilterTest.cxx  itkNthOrderAccurateDerivativeImageFilterTest.cxx  itkNthOrderAccurateGradientImageFilterTest.cxx  itkSecondOrderGradientImageFilterTest.cxx
Testing/Data/Input/: foot.mha
doc/: itk.bst
doc/Comparisons/: other_gradients.py
include/: itkHigherOrderAccurateDerivativeImageFilter.h  itkHigherOrderAccurateDerivativeImageFilter.hxx  itkHigherOrderAccurateDerivativeImageFilter.txx  itkHigherOrderAccurateDerivativeOperator.h  itkHigherOrderAccurateDerivativeOperator.hxx  itkHigherOrderAccurateDerivativeOperator.txx  itkHigherOrderAccurateGradientImageFilter.h  itkHigherOrderAccurateGradientImageFilter.hxx  itkHigherOrderAccurateGradientImageFilter.txx
test/: CMakeLists.txt  itkHigherOrderAccurateDerivativeImageFilterTest.cxx  itkHigherOrderAccurateGradientImageFilterTest.cxx
wrapping/: itkHigherOrderAccurateDerivativeImageFilter.wrap  itkHigherOrderAccurateDerivativeOperator.wrap  itkHigherOrderAccurateGradientmageFilter.wrap
