set( INPUT_DIR ${ITK_HIGHER_ORDER_ACCURATE_GRADIENT_SOURCE_DIR}/Testing/Data/Input )

add_executable( itkHigherOrderAccurateGradientImageFilterTest
  itkHigherOrderAccurateGradientImageFilterTest.cxx
  )
target_link_libraries( itkHigherOrderAccurateGradientImageFilterTest
  ITKCommon
  ITKIO
  )

add_test( itkHigherOrderAccurateGradientImageFilterTest
  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/itkHigherOrderAccurateGradientImageFilterTest
  --compare itkHigherOrderAccurateDerivativeImageFilterTest_Accuracy1_Direction0.mha
  itkHigherOrderAccurateDerivativeImageFilterTest_DerivativeImageFilter_Direction0.mha
  --compare itkHigherOrderAccurateDerivativeImageFilterTest_Accuracy1_Direction1.mha
  itkHigherOrderAccurateDerivativeImageFilterTest_DerivativeImageFilter_Direction1.mha
  itkHigherOrderAccurateGradientImageFilterTest
  ${INPUT_DIR}/foot.mha
  itkHigherOrderAccurateGradientImageFilterTest
  )


add_executable( itkHigherOrderAccurateDerivativeImageFilterTest
  itkHigherOrderAccurateDerivativeImageFilterTest.cxx
  )
target_link_libraries( itkHigherOrderAccurateDerivativeImageFilterTest
  ITKCommon
  ITKIO
  )

add_test( itkHigherOrderAccurateDerivativeImageFilterTest
  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/itkHigherOrderAccurateDerivativeImageFilterTest
  --compare itkHigherOrderAccurateGradientImageFilterTest_Accuracy1_Magnitude.mha
  itkHigherOrderAccurateGradientImageFilterTest_GradientImageFilter_Magnitude.mha
  itkHigherOrderAccurateDerivativeImageFilterTest
  ${INPUT_DIR}/foot.mha
  itkHigherOrderAccurateDerivativeImageFilterTest
  )
